# FasterUI

./: .gitignore  Earthfile  README.md  ci.sh
.github/workflows/: deploy.yml  earthly.yml  python.yml  release.yml
component-library/: .Dockerignore  .gitignore  Earthfile  README.md  eslint.config.js  generate_schema.sh  index.html  openapi_schema.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tslint.json  vite.config.ts
component-library/.storybook/: main.ts  manager.ts  preview.tsx
component-library/lib/: RenderComponent.tsx  entrypoints.tsx  main.ts
component-library/public/: devices_page.json
component-library/src/: App.tsx  Page404.tsx  RenderComponent.tsx  RenderPageFromAPI.tsx  RenderPageFromJSON.tsx
deployment/: deploy_staging.sh  deploy_to_kubernetes.sh  github_env.sh
deployment/fasterui-server/: Chart.yaml  values.yaml
deployment/fasterui-server/templates/: api.yaml  deployment.yaml  docs.yaml  ingress.yaml  service.yaml
docs/: .gitignore  Dockerfile  Earthfile  netlify.toml  next.config.mjs  package-lock.json  package.json
docs/public/: openapi.html
docs/src/app/: layout.tsx
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  RenderPageFromAPI.tsx  RenderPageFromJSON.tsx
python/: .gitignore  Dockerfile  Earthfile  pyproject.toml  schema.py
python/fasterui/: __main__.py  components.py  dump.py  schema.json
python/fasterui/examples/: __init__.py  button.py  page.py
schema/: components.libsonnet  schema.jsonnet  schema.sh  utils.libsonnet
(+81 files in other folders)
