[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fasterui"
version = "0.1.0"
dependencies = [
    "pydantic>=2.0"
]
requires-python = ">=3.8"
authors = [
  {name = "Tomas Krejci", email = "tomas.krejci@ampiato.com"},
]
description = "FasterUI is a Python library for building user interfaces. Pronto."

[project.urls]
Repository = "https://github.com/ampiato/fasterui.git"
