[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fasterui"
dependencies = ["pydantic>=2.0"]
requires-python = ">=3.8"
authors = [{ name = "Tomas Krejci", email = "tomas.krejci@ampiato.com" }]
description = "FasterUI is a Python library for building user interfaces. Pronto."
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "fasterui.__version__"}

[project.optional-dependencies]
openapi = ["fastapi>=0.112", "uvicorn>=0.30"]

[project.scripts]
fasterui = "fasterui:__main__.main"

[tool.ruff]
line-length = 127

[project.urls]
Homepage = "https://github.com/ampiato/FasterUI"
Issues = "https://github.com/ampiato/FasterUI/issues"
Repository = "https://github.com/ampiato/FasterUI.git"
